<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:key="pref_default_pane"
        android:title="@string/pref_default_pane_title"
        android:dialogTitle="@string/pref_default_pane_title"
        android:defaultValue="FEsubscriptions"
        android:entries="@array/panes_entries"
        android:entryValues="@array/panes_values" />

    <EditTextPreference
        android:key="pref_playlist"
        android:title="@string/pref_playlist_title"
        android:enabled="false" />

    <EditTextPreference
        android:key="pref_subscription"
        android:title="@string/pref_subscription_title"
        android:enabled="false" />

    <ListPreference
        android:key="pref_maximum_stream_quality"
        android:title="@string/pref_maximum_stream_quality_title"
        android:defaultValue="-2"
        android:entries="@array/quality_entries"
        android:entryValues="@array/quality_values" />
    
	<CheckBoxPreference
        android:defaultValue="false"
        android:key="pref_autoloop"
        android:title="@string/pref_autoloop_title"
        android:summary="@string/pref_autoloop_summary" />
	
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="pref_override_device_support"
        android:title="@string/pref_override_device_support_title"
        android:summary="@string/pref_override_device_support_summary" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="pref_show_app_icon"
        android:title="@string/pref_show_app_icon_title" />

</PreferenceScreen>