<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:layout_gravity="fill_horizontal"
	android:gravity="center"
	android:orientation="vertical"
	android:paddingTop="20dp"
	android:paddingBottom="5dp">

    <LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="fill_horizontal"
		android:gravity="center"
		android:orientation="horizontal">
		
        <ImageView
			android:id="@+id/imageView1"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:contentDescription="@string/app_name"
			android:src="@drawable/ic_launcher" />
		
		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="fill_horizontal"
			android:gravity="center"
			android:orientation="vertical"
			android:layout_marginLeft="25dp"
			android:layout_marginRight="25dp">
			
			<TextView
				android:id="@+id/textViewAppName"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/app_name"
				android:textSize="20sp" />
		
			<TextView
				android:id="@+id/textViewVersion"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text=""
				android:textSize="12sp" />
		</LinearLayout>
	</LinearLayout>
	
    <LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="fill_horizontal"
		android:gravity="center"
		android:orientation="horizontal"
		android:layout_marginTop="10dp"
		style="?android:attr/buttonBarStyle">

        <Button
			android:id="@+id/buttonSupport"
			android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"				
			android:text="@string/pref_support_title"
			style="?android:attr/buttonBarButtonStyle" />
        
        <Button
			android:id="@+id/buttonDonate"
			android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"				
			android:text="@string/about_donate"
			style="?android:attr/buttonBarButtonStyle" />
		
		<Button
			android:id="@+id/buttonClose"
			android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"				
			android:text="@string/about_close"
				style="?android:attr/buttonBarButtonStyle" />
	</LinearLayout>
			
</LinearLayout>